1.016 2013-07-27
   - Fix repository metadata. RT#87114

1.015 2012-06-27
   - Add broken_dotnet_digest_without_query_string option

     Allows digest authentication from .NET, which does not include the
     query string in the uri in the digest Authorization header.

   - Fix broken synopsis. RT#75254

1.014 2012-02-05
   - Add require_ssl configuration setting.
   - Add no_unprompted_authorization_required configuration setting.

1.013 2010-12-14
   - Call store_digest_authorization_nonce() instead of $c->cache->set()
     in authenticate_digest() (RT#63669) (rjk)
   - Make Test::Exception and Test::MockObject be listed as test_requires
     rather than requires (RT#54029)
   - Skip WWW::Mech tests unless WWW::Mech is a new enough version (RT#55303).
   - Improve documentation for authenticate_digest() (rjk)
     - depends on Catalyst::Plugin::Cache, not Catalyst::Plugin::Session
     - reorganize and clarify

1.012 2010-03-07
   - Move actions out of the test applications to stop warnings.

   - Make Pod tests author only.

1.011 2009-06-26
   - Added true/false check to _debug option

1.010 2009-05-14
   - Moved tests out to t/lib/ (dhoss)

   - Add debug when a user is found, but passwords don't match (abraxxa)

1.009  2009-01-04
   - Remove use of _config accessor, which I'd stupidly cargo-culted.
     As we don't ever run in auth back-compat mode, we can store
     everything in instance data without worrying about conflicts.
     Note however - have to keep the accessor itself so that our
     parent class (which is still stupid and uses it) continues to work.

1.008  2008-12-10
  - Fix issue with the user not being authenticated into the correct
    realm, by not calling $c->set_authenticated ourselves, but instead
    just returning the user object. Fix suggested by Bernhard Graf. (t0m)
    - Add test for this (t0m)
  - Change $user to $user_obj in authenticate_digest for consistency (t0m)

1.007  2008-11-19