@@ -1,27 +1,0 @@
-.git/
-\bMYMETA
-# Avoid version control files.
-\bRCS\b
-\bCVS\b
-,v$
-\B\.svn\b
-# Avoid Makemaker generated and utility files.
-\bMakefile$
-\bblib
-\bMakeMaker-\d
-\bpm_to_blib$
-\bblibdirs$
-^MANIFEST\.SKIP$
-# Avoid Module::Build generated and utility files.
-\bBuild$
-\b_build
-# Avoid temp and backup files.
-~$
-\.tmp$
-\.old$
-\.bak$
-\#$
-\b\.#
-^..*\.sw[po]$
-# Avoid ShipIt configuration
-.shipit
