@@ -1,0 +1,31 @@
+name    = Catalyst-Authentication-Credential-HTTP
+author  = יובל קוג'מן (Yuval Kogman) <nothingmuch@woobling.org>
+license = Perl_5
+copyright_holder = יובל קוג'מן (Yuval Kogman)
+copyright_year = 2006
+
+; GitHub mirrors from Shadowcat. We list it in docs and metadata so we can get pull requests.
+; The canonical repo is:
+; r/o: git://git.shadowcat.co.uk/catagits/Catalyst-Authentication-Credential-HTTP.git
+; r/w: catagits@git.shadowcat.co.uk:Catalyst-Authentication-Credential-HTTP.git
+; web: http://git.shadowcat.co.uk/gitweb/gitweb.cgi?p=catagits/Catalyst-Authentication-Credential-HTTP.git
+
+[@Author::ETHER]
+:version = 0.094
+authority = cpan:NUFFIN
+GithubMeta.remote = github
+server = github
+Test::MinimumVersion.max_target_perl = 5.008003
+StaticInstall.dry_run = 0   ; we can safely set this here
+-remove = Test::EOL             ; TODO
+-remove = Test::NoTabs          ; TODO
+
+[Prereqs]
+Catalyst::Plugin::Authentication = 0.10005
+
+[Prereqs / DevelopRequires]
+Test::WWW::Mechanize::Catalyst = 0.51
+
+[MetaResources]
+x_IRC = irc://irc.perl.org/#catalyst
+x_MailingList = http://lists.scsys.co.uk/cgi-bin/mailman/listinfo/catalyst
