@@ -1,4 +1,6 @@
 package Catalyst::Authentication::Credential::HTTP;
+# ABSTRACT: HTTP Basic and Digest authentication for Catalyst
+
 use base qw/Catalyst::Authentication::Credential::Password/;
 
 use strict;
@@ -377,7 +379,7 @@ package Catalyst::Authentication::Credential::HTTP::Nonce;
 
 use strict;
 use base qw[ Class::Accessor::Fast ];
-use Data::UUID ();
+use Data::UUID 0.11 ();
 
 __PACKAGE__->mk_accessors(qw[ nonce nonce_count qop opaque algorithm ]);
 
@@ -400,10 +402,11 @@ __END__
 
 =pod
 
-=head1 NAME
-
-Catalyst::Authentication::Credential::HTTP - HTTP Basic and Digest authentication
-for Catalyst.
+=for stopwords
+rfc
+rfc2617
+auth
+sess
 
 =head1 SYNOPSIS
 
@@ -658,46 +661,8 @@ with L<Catalyst::Authentication::Store::Htpasswd>, or
 L<Catalyst::Authentication::Store::DBIC> stores whose
 C<password> methods return a hashed or salted version of the password.
 
-=head1 AUTHORS
-
-Updated to current name space and currently maintained
-by: Tomas Doran C<bobtfish@bobtfish.net>.
-
-Original module by:
-
-=over
-
-=item Yuval Kogman, C<nothingmuch@woobling.org>
-
-=item Jess Robinson
-
-=item Sascha Kiefer C<esskar@cpan.org>
-
-=back
-
-=head1 CONTRIBUTORS
-
-Patches contributed by:
-
-=over
-
-=item Peter Corlett
-
-=item Devin Austin (dhoss) C<dhoss@cpan.org>
-
-=item Ronald J Kimball
-
-=back
-
 =head1 SEE ALSO
 
 RFC 2617 (or its successors), L<Catalyst::Plugin::Cache>, L<Catalyst::Plugin::Authentication>
 
-=head1 COPYRIGHT & LICENSE
-
-        Copyright (c) 2005-2008 the aforementioned authors. All rights
-        reserved. This program is free software; you can redistribute
-        it and/or modify it under the same terms as Perl itself.
-
 =cut
-
