@@ -1,5 +1,0 @@
-use Test::More;
-
-use Test::Pod::Coverage 1.04;
-
-all_pod_coverage_ok();
